# apigee-eval-psc-tf

./: .gitignore  .terraform.lock.hcl  CONTRIBUTING.md  DRZ.md  Makefile  README.md  iam.tf  main.tf  outputs.tf  providers.tf  pyproject.toml  pytest.ini  secrets.tf  util  variables.tf
.gemini/: settings.json
apiproxies/weather-api/apiproxy/: weather-api.xml
apiproxies/weather-api/proxies/: default.xml
apiproxies/weather-api/tests/: get-stations.json
config/: scotiabank.json
docs/: IAM.md  TROUBLESHOOTING.md
modules/apigee-core/: main.tf  outputs.tf  variables.tf
modules/dns/: main.tf
modules/ingress-lb/: main.tf  variables.tf
scripts/: configure_project.sh
scripts/cli/: __init__.py  app.py  config.py  config_sdk.py  core.py  engine.py  main.py  mappers.py  paths.py  schemas.py  template.py
scripts/cli/cloud/: apigee_api.py  base.py  factory.py  mock.py  terraform.py
scripts/cli/commands/: __init__.py  apis.py  config.py  core.py  create.py  import.py  import_.py  import_.py.bak  import_cmd.py  init.py  list.py  project.py  show.py  status.py  terraform.py  (+2 more)
templates/: ca-drz.json  us-central1.json
tests/: conftest.py
tests/integration/: conftest.py  test_apply.py  test_create.py  test_deny_deletes.py  test_import.py  test_recover.py  test_update.py
tests/unit/: conftest.py  test_apply.py  test_create.py  test_iam_safety.py  test_import.py  test_init.py  test_schemas.py  test_show.py  test_status.py  test_update.py
tf/0-bootstrap/: iam.tf  outputs.tf  providers.tf  variables.tf
tf/1-main/: main.tf  outputs.tf  providers.tf  variables.tf
(+1 files in other folders)
